# Oprel

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE_COMPARISON.md  DOCUMENTATION_PLAN.md  IMAGE_GENERATION_REFERENCE.md  api_reference.md  architecture.md  index.md  quickstart.md  troubleshooting.md
examples/: basic_usage.py  chat_templates.py  embeddings_usage.py  image_generation_examples.py  image_generation_usage.py  oprel_compatible_api.py  server_with_ollama.py  server_with_openai.py  ssl_configuration.py
oprel/: __init__.py  api_models.py  client_api.py  version.py
oprel-0.3.1/oprel/core/: model.py
oprel-0.3.4/oprel/telemetry/: memory.py
oprel/cli/: embed.py  image.py  knowledge.py  main.py  setup_commands.py  text.py  video.py  vision.py
oprel/client/: base.py  http.py  socket.py
oprel/core/: config.py  exceptions.py  model.py
oprel/downloader/: aliases.py  cache.py  comfyui_installer.py  hub.py  image_hub.py  metadata.py  migrate_metadata.py
oprel/knowledge/: config.py  config_knowledge.py  knowledge_store.py  sync_engine.py
oprel/models/: __init__.py  gguf_parser.py  image_model_detector.py  model_types.py
oprel/recommendations/: __init__.py  cpu.py  recommender.py
oprel/runtime/: __init__.py  cpu_optimizer.py  cuda_errors.py  image_generation.py  kv_cache.py  layer_calculator.py  monitor.py  offloading.py  process.py  quantization.py
oprel/runtime/backends/: base.py  comfyui.py  comfyui_process.py  llama_cpp.py  multimodal.py  pytorch_backend.py  selector.py  vision.py
oprel/runtime/binaries/: installer.py  registry.py
oprel/server/: __init__.py  app.py  daemon.py  db.py  download_manager.py
oprel/server/domain/: models.py  state.py
oprel/server/routes/: __init__.py  conversations.py  downloads.py  generation.py  health.py  images.py  knowledge.py  metrics.py  models.py  ollama_compat.py  openai_compat.py  providers.py  system.py  users.py
oprel/server/schemas/: common.py  generation.py  images.py  openai.py  providers.py
oprel/server/services/: context.py  conversations.py  downloads.py  generation.py  images.py  knowledge.py  metrics.py  model_state.py  models.py  providers.py  users.py  webui.py
oprel/telemetry/: hardware.py  memory_pressure.py  profiler.py  recommender.py  vram_monitor.py
oprel/utils/: chat_templates.py  file_parser.py  logging.py  model_info.py  multimodal.py  paths.py  platform.py
oprel/webui/: index.html
oprel/webui-legacy/: __init__.py  index.html
oprel/webui-legacy/css/: style.css
oprel/webui-legacy/js/: api.js  app.js
oprel/webui-legacy/js/components/: chat.js  models.js  settings.js
oprel/webui-legacy/js/renderer/: messageRenderer.js
oprel/webui-react/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
oprel/webui-react/app/: globals.css  layout.tsx  page.tsx
oprel/webui-react/app/chat/: page.tsx
oprel/webui-react/app/dev/: page.tsx
oprel/webui-react/app/images/: page.tsx
oprel/webui-react/app/knowledge/: page.tsx
oprel/webui-react/app/models/: page.tsx
oprel/webui-react/app/new-chat/: page.tsx
oprel/webui-react/app/settings/: page.tsx
oprel/webui-react/components/: AppShell.tsx  ArtifactPanel.tsx  ChatRouteClient.tsx  ChatView.tsx  DevView.tsx  DownloadDialog.tsx  ImageGenerationView.tsx  KnowledgeView.tsx  ModelsView.tsx  QuantizationSelector.tsx  SettingsModal.tsx  Sidebar.tsx
oprel/webui-react/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  (+11 more)
oprel/webui-react/services/: api.ts  context.tsx  data.ts  downloadContext.tsx  providers.ts
oprel/webui/css/: style.css
oprel/webui/js/: api.js  app.js
oprel/webui/js/components/: chat.js  developer.js  settings.js  sidebar.js
oprel/webui/js/renderer/: messageRenderer.js
tests/: conftest.py  test_embedding_support.py
tests/integration/: test_backends.py  test_end_to_end.py
tests/unit/: test_basec.py
