[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oprel"
version = "0.3.4"
description = "Oprel is a high-performance Python library for running large language models locally. It provides a production-ready runtime with advanced memory management, hybrid offloading, and full multimodal support."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Oprel Team and Skyroot Solutions", email = "info@skyrootsolutions.com"}
]
keywords = [
    # Core functionality
    "llm",
    "local-llm",
    "local-ai",
    "inference",
    "llm-inference",
    
    # Ollama comparison (SEO)
    "ollama",
    "ollama-alternative",
    "ollama-python",
    
    # Model formats
    "gguf",
    "llama-cpp",
    "llama.cpp",
    "quantization",
    
    # Popular models (SEO)
    "llama",
    "llama3",
    "mistral",
    "gemma",
    "qwen",
    "phi",
    "deepseek",
    
    # Use cases
    "chatbot",
    "text-generation",
    "ai-chat",
    "conversational-ai",
    "offline-ai",
    
    # Technical
    "cpu-inference",
    "gpu-inference",
    "model-server",
    "ai-runtime",
    "machine-learning",
    
    # Privacy & deployment
    "privacy",
    "on-premise",
    "edge-ai",
    "embedded-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
    "Environment :: Console",
    "Environment :: GPU",
    "Natural Language :: English",
]

dependencies = [
    "huggingface-hub>=0.20.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "pydantic>=2.10.0",
    "rich>=13.0.0",  # For pretty CLI output
    "tqdm>=4.65.0",  # For download progress bars (M1.15)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
    "starlette>=0.41.3",
]

[project.optional-dependencies]
# Core local inference (most users need this)
local = [
    "torch>=2.1.0",
    "transformers>=4.36.0",    # For PyTorch backend (M1.23)
    "bitsandbytes>=0.41.0",    # For quantization (M1.24)
    "accelerate>=0.25.0",      # For device_map and multi-GPU (M1.24)
]

# NVIDIA GPU acceleration
cuda = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

# All extras
all = [
    "oprel[local,cuda,server,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ragultv/oprel-SDK"
Documentation = "https://github.com/ragultv/oprel-SDK#readme"
Repository = "https://github.com/ragultv/oprel-SDK"
Issues = "https://github.com/ragultv/oprel-SDK/issues"

[project.scripts]
oprel = "oprel.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oprel*"]

[tool.setuptools.package-data]
oprel = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=oprel --cov-report=term-missing"